[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/CameraRig.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Icons/peach.png" type="Texture" id=4]
[ext_resource path="res://Graphics/BaseTheme.tres" type="Theme" id=5]
[ext_resource path="res://Graphics/Fonts/Bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://Graphics/Icons/condom.png" type="Texture" id=7]

[sub_resource type="SphereMesh" id=2]
radius = 0.2
height = 0.4

[sub_resource type="SphereShape" id=1]

[node name="Player" type="Spatial"]
script = ExtResource( 3 )

[node name="PlayerCol" type="StaticBody" parent="."]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="PlayerCol"]
mesh = SubResource( 2 )
skeleton = NodePath("../CollisionShape")

[node name="CollisionShape" type="CollisionShape" parent="PlayerCol"]
shape = SubResource( 1 )

[node name="SmoothMove" type="Spatial" parent="."]

[node name="CameraRig" type="Spatial" parent="SmoothMove"]
script = ExtResource( 1 )

[node name="turn" type="Spatial" parent="SmoothMove/CameraRig"]

[node name="tilt" type="Spatial" parent="SmoothMove/CameraRig/turn"]

[node name="Camera" type="Camera" parent="SmoothMove/CameraRig/turn/tilt"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.87272 )
current = true
far = 500.0

[node name="Model" type="Spatial" parent="SmoothMove"]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 99.0
theme = ExtResource( 5 )

[node name="Label" type="Button" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 35.0
margin_top = -7.0
margin_right = 75.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 6 )
text = "Cambiar mi avatar"

[node name="Stats" type="Control" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -273.0

[node name="Inventory" type="Control" parent="HUD/Stats"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -19.5
margin_right = -32.0
margin_bottom = 20.5

[node name="TextureRect" type="TextureRect" parent="HUD/Stats/Inventory"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
texture = ExtResource( 7 )
expand = true

[node name="InvLabel" type="Label" parent="HUD/Stats/Inventory"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -7.0
margin_right = -16.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
text = "INV"

[node name="Score" type="Control" parent="HUD/Stats"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -19.5
margin_right = -161.0
margin_bottom = 20.5

[node name="TextureRect2" type="TextureRect" parent="HUD/Stats/Score"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
texture = ExtResource( 4 )
expand = true

[node name="ScoreLabel" type="Label" parent="HUD/Stats/Score"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -7.0
margin_right = -3.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
text = "SCORE"

[connection signal="pressed" from="HUD/Label" to="." method="_on_Label_pressed"]
